--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
@@ -114,7 +113,6 @@
       </div>
     </nav>
     <!-- navbar section ends -->
-
     <!-- crypto starts here -->
     <section class="crypto-section">
       <div class="row launch-div">
@@ -124,9 +122,10 @@
             investing for everyone
           </h6>
           <p class="mt-4 crypto-content">
-            Axia, the lead in Cryptocurrency indexes gives you the tools <br> to take
-            control of your financies and make your Cryptocurrencies <br> work smarter,
-            not harder
+            Axia, the lead in Cryptocurrency indexes gives you the tools <br />
+            to take control of your financies and make your Cryptocurrencies
+            <br />
+            work smarter, not harder
           </p>
           <button type="button" class="btn btn-launch mt-3">Launch dApp</button>
         </div>
@@ -138,18 +137,19 @@
       </div>
     </section>
     <!-- crypto ends here -->
-
     <!-- crypto introduction starts here -->
     <section class="crypto-intro">
       <h6 class="crypto-heading mt-5">
         Introducing <br />
         Axia Protocol
       </h6>
-
-      <div class="row row-content">
-        <div class="col-md-4">
+      <div
+        class="row row-content"
+        style="gap: 5rem; display: grid; grid-template-columns: auto auto auto"
+      >
+        <div>
           <div class="mb-4">
-            <img src="./images/amount.svg" alt="" />
+            <img class="protocol-img" src="./images/amount.svg" alt="" />
           </div>
           <h3 class="pt-4 content-sub-heading">Invest any amount</h3>
           <p class="mt-4 col-content">
@@ -159,9 +159,9 @@
             smarter.
           </p>
         </div>
-        <div class="col-md-4">
+        <div>
           <div class="mb-4">
-            <img src="./images/portfolio.svg" alt="" />
+            <img class="protocol-img" src="./images/portfolio.svg" alt="" />
           </div>
           <h3 class="pt-4 content-sub-heading">Diversify your Portfolio</h3>
           <p class="mt-4 col-content">
@@ -171,9 +171,9 @@
             diversification.
           </p>
         </div>
-        <div class="col-md-4">
+        <div>
           <div class="mb-4 esy-img-div">
-            <img src="./images/easy.svg" alt="" />
+            <img class="protocol-img" src="./images/easy.svg" alt="" />
           </div>
           <h3 class="pt-4 content-sub-heading">Simple and easy</h3>
           <p class="mt-4 col-content">
@@ -185,7 +185,6 @@
       </div>
     </section>
     <!-- crypto introduction ends here -->
-
     <!-- manage portfolio ends here -->
     <section class="manage-portfolio">
       <div class="row px-4 py-5 inner-div">
@@ -206,7 +205,6 @@
           </div>
         </div>
       </div>
-
       <div class="row second-inner-div">
         <div class="col-md-6 manage-first-col">
           <h6 class="manage-heading">
@@ -229,29 +227,29 @@
       </div>
     </section>
     <!-- manage portfolio ends here -->
-
     <!-- instrument section starts here -->
     <section class="instrument-bck">
       <div>
         <h6 class="instru-heading">Our instruments</h6>
-
         <div class="row instru-row">
           <div class="col-md-6 pr-5 axia-fund">
             <h3 style="color: rgba(28, 41, 59, 1)"><b>Axia Funds</b></h3>
             <p class="instru-content mt-4">
-              Automatically diversify your portfolio into <br> funds with a press of
-              a button. Each fund is <br> carefully arranged by our team who
-              scrutinise <br> each token to ensure you get the best possible <br> return
-              with minimal risk on your investment.
+              Automatically diversify your portfolio into <br />
+              funds with a press of a button. Each fund is <br />
+              carefully arranged by our team who scrutinise <br />
+              each token to ensure you get the best possible <br />
+              return with minimal risk on your investment.
             </p>
           </div>
           <div class="col-md-6 stake-div pl-5">
             <h3 style="color: rgba(28, 41, 59, 1); font-weight: 600">
               <b>Stakings</b>
             </h3>
-            <p class="instru-content mt-4" >
-              Earn upto 30% APY* by staking your tokens. <br> By staking you provide
-              additional liquidity and <br> earn daily 'emissions' for doing so!
+            <p class="instru-content mt-4">
+              Earn upto 30% APY* by staking your tokens. <br />
+              By staking you provide additional liquidity and <br />
+              earn daily 'emissions' for doing so!
             </p>
             <small>
               *Apy varies based on the size of the pooled investments within a
@@ -262,9 +260,7 @@
         </div>
       </div>
     </section>
-
     <!--instrument section ends here -->
-
     <!-- axia news section starts here -->
     <section class="news-section">
       <div>
@@ -280,7 +276,6 @@
                   /></a>
                 </span>
               </div>
-
               <h3 class="mt-4 web-heading">Website nightmode initiated</h3>
             </div>
           </div>
@@ -294,7 +289,6 @@
                   /></a>
                 </span>
               </div>
-
               <h3 class="mt-4 web-heading">
                 Axia Releases <br />
                 Whitepaper 2.0
@@ -311,7 +305,6 @@
                   /></a>
                 </span>
               </div>
-
               <h3 class="mt-4 web-heading">
                 Axia Launches <br />
                 New Website
@@ -322,7 +315,6 @@
       </div>
     </section>
     <!-- axia news section ends here -->
-
     <!-- axia button section ends here -->
     <section class="btn-news-section">
       <div class="meet-btn-div">
@@ -330,7 +322,6 @@
       </div>
     </section>
     <!-- axia button section ends here -->
-
     <!-- axia footer section starts here -->
     <footer>
       <div class="row">
@@ -338,7 +329,6 @@
           <div class="row">
             <div class="col-md-6">
               <h4>Navigate</h4>
-
               <div class="mt-4">
                 <div class="foot-item">Support</div>
                 <div class="foot-item">About Us</div>
@@ -350,13 +340,10 @@
             </div>
             <div class="col-md-6 connect-div">
               <h4>Connect with us</h4>
-
               <div class="mt-4 foot-item">Telegram</div>
               <div class="foot-item">Twitter</div>
               <div class="mb-5 foot-item">Dischord</div>
-
               <hr />
-
               <span class="foot-item" style="color: #f25e66"
                 >Axia Terms and Condition <br />
                 Privacy</span
@@ -374,7 +361,6 @@
       </div>
     </footer>
     <!-- axia footer section ends here -->
-
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
