--- a/meet.html
+++ b/meet.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,500;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,500;1,600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@100;200;300;500&display=swap"
@@ -52,7 +55,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
@@ -121,11 +123,9 @@
       </div>
     </nav>
     <!-- navbar section ends -->
-
     <section class="meet-the-team-section">
       <div class="meet-the-team">Meet the team</div>
     </section>
-
     <!-- main section starts here -->
     <section class="main-section">
       <div class="first-item">
@@ -147,7 +147,6 @@
             programmingand that drives his desire to get his code and programs
             working as intended.
           </p>
-
           <p class="mt-4" style="line-height: 2rem">
             In his early years as a programmer, he has always found himself
             sitting for lengthy hours front of his computer working until a
@@ -162,7 +161,6 @@
           </p>
         </div>
       </div>
-
       <div class="second-item">
         <div class="grid-container">
           <div class="second-one">
@@ -176,7 +174,6 @@
                 <span class="founder">COMMUNITY MODERATOR</span>
               </div>
             </div>
-
             <div class="text-div mt-4">
               <p style="line-height: 2rem">
                 Sam has started to get interested in cryptocurrencies in 2017,
@@ -198,7 +195,6 @@
                   >https://defidive.medium.com/</a
                 >
               </p>
-
               <p class="mt-4" style="line-height: 2rem">
                 In November of 2020, Sam joined the Axia community and as time
                 went on wanted to help bring awareness to the potential of Axia,
@@ -212,7 +208,6 @@
               </p>
             </div>
           </div>
-
           <div class="second-two">
             <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
@@ -224,7 +219,6 @@
                 <span class="founder">FOUNDER</span>
               </div>
             </div>
-
             <div class="text-div mt-4">
               <p style="line-height: 2rem">
                 Yourfacemyfoot is a lifelong martial artist on the journey of
@@ -251,7 +245,6 @@
           </div>
         </div>
       </div>
-
       <div class="second-item">
         <div class="grid-container">
           <div class="second-one">
@@ -266,7 +259,6 @@
                 <span class="founder">SOCIAL MEDIA</span>
               </div>
             </div>
-
             <div class="text-div mt-4">
               <p style="line-height: 2rem">
                 Shane advocates for making crypto safer and more adaptable to
@@ -275,13 +267,11 @@
                 has brought to Axia creativity and his experience as an early
                 investor in cryptocurrencies.
               </p>
-
               <p class="mt-4" style="line-height: 2rem">
                 This includes marketing and all the memes you want.
               </p>
             </div>
           </div>
-
           <div class="second-two">
             <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
@@ -294,7 +284,6 @@
                 <span class="founder">PROJECT LEAD</span>
               </div>
             </div>
-
             <div class="text-div mt-4">
               <p style="line-height: 2rem">
                 With a background in Medicine, Zee has a lifelong passion in
@@ -320,45 +309,45 @@
       </div>
     </section>
     <!-- main section ends here -->
-
-     <!-- axia footer section starts here -->
+    <!-- axia footer section starts here -->
     <footer>
       <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Navigate</h4>
-
-           <div class="mt-4">
-              <div class="foot-item">Support</div>
-             <div class="foot-item">About Us</div>
-              <div class="foot-item">Company News</div>
-              <div class="foot-item">Invest</div>
-              <div class="foot-item">Developer</div>
-              <div class="foot-item">Community</div>
-           </div>
-
-          </div>
-          <div class="col-md-6 connect-div">
-            <h4>Connect with us</h4>
-
-            <div class="mt-4 foot-item">Telegram</div>
-             <div class="foot-item">Twitter</div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6">
+              <h4>Navigate</h4>
+              <div class="mt-4">
+                <div class="foot-item">Support</div>
+                <div class="foot-item">About Us</div>
+                <div class="foot-item">Company News</div>
+                <div class="foot-item">Invest</div>
+                <div class="foot-item">Developer</div>
+                <div class="foot-item">Community</div>
+              </div>
+            </div>
+            <div class="col-md-6 connect-div">
+              <h4>Connect with us</h4>
+              <div class="mt-4 foot-item">Telegram</div>
+              <div class="foot-item">Twitter</div>
               <div class="mb-5 foot-item">Dischord</div>
-
-               <hr>
-
-              <span class="foot-item" style="color: #F25E66">Axia Terms and Condition <br> Privacy</span>           
+              <hr />
+              <span class="foot-item" style="color: #f25e66"
+                >Axia Terms and Condition <br />
+                Privacy</span
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex justify-content-end white-logo-div">
-        <img class="white-logo" src="./images/white-logo.svg" alt="white-logo" >
-      </div>
+        <div class="col-md-6 d-flex justify-content-end white-logo-div">
+          <img
+            class="white-logo"
+            src="./images/white-logo.svg"
+            alt="white-logo"
+          />
+        </div>
       </div>
     </footer>
     <!-- axia footer section ends here -->
-
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
